--- a/CentOS_7_Teeth_Hadoop_Ambari.cfg
+++ b/CentOS_7_Teeth_Hadoop_Ambari.cfg
@@ -263,7 +263,7 @@ EOF
 
 # log packages
 wget http://KICK_HOST/kickstarts/package_postback.sh
-bash package_postback.sh CentOS_7_Teeth
+bash package_postback.sh CentOS_7_Teeth_Hadoop_Ambari
 
 /usr/bin/systemctl disable NetworkManager.service
 
@@ -274,6 +274,10 @@ bash package_postback.sh CentOS_7_Teeth
 #sed -i '/baseurl/s/# *//' /etc/yum.repos.d/epel.repo
 #sed -i '/mirrorlist/s/^/#/' /etc/yum.repos.d/CentOS-Base.repo
 #sed -i '/mirrorlist/s/^/#/' /etc/yum.repos.d/epel.repo
+
+wget http://KICK_HOST/kickstarts/CentOS_7_Teeth_Hadoop_post_ambari.sh
+chmod +x CentOS_7_Teeth_Hadoop_post_ambari.sh
+bash -x CentOS_7_Teeth_Hadoop_post_ambari.sh
 
 # clean up
 passwd -d root
