--- a/Fedora_21_Teeth.cfg
+++ b/Fedora_21_Teeth.cfg
@@ -78,6 +78,7 @@ yum-plugin-versionlock
 # really, no thanks grub2
 #-grub2-tools
 #-grub2
+mdadm
 
 %end
 
@@ -302,7 +303,7 @@ EOF
 cat > /etc/sysconfig/autofsck << EOF
 AUTOFSCK_DEF_CHECK=yes
 PROMPT=no
-AUTOFSCK_OPT=“-y”
+AUTOFSCK_OPT="-y"
 AUTOFSCK_TIMEOUT=10
 EOF
 
