--- a/Fedora_22_PVHVM.cfg
+++ b/Fedora_22_PVHVM.cfg
@@ -10,10 +10,9 @@ cmdline
 #url --url=http://dl.fedoraproject.org/pub/fedora/linux/releases/22/Server/x86_64/os/
 #repo --name=fedora --baseurl=http://dl.fedoraproject.org/pub/fedora/linux/releases/22/Everything/x86_64/os/
 #
-url --url=http://dl.fedoraproject.org/pub/fedora/linux/development/22/x86_64/os/
-#url --url=http://dl.fedoraproject.org/pub/fedora/linux/releases/test/22_Beta/Server/x86_64/os/
-repo --name=fedora --baseurl=http://dl.fedoraproject.org/pub/fedora/linux/development/22/x86_64/os/
-#repo --name=fedora --baseurl=http://dl.fedoraproject.org/pub/fedora/linux/releases/test/22_Beta/Server/x86_64/os/
+url --url=http://mirror.rackspace.com/fedora/releases/22/Server/x86_64/os/
+repo --name=fedora --baseurl=http://mirror.rackspace.com/fedora/releases/22/Everything/x86_64/os/
+
 
 # Language and keyboard setup
 lang en_US.UTF-8
@@ -158,8 +157,12 @@ wget http://ce3598b91333d7474379-b85ce4d8c2253d3876bef92f62a263f8.r84.cf5.rackcd
 rpm -Uhv xe-guest-utilities*.rpm
 
 # install agent
-wget https://github.com/rackerlabs/openstack-guest-agents-unix/releases/download/1.39.1/nova-agent-1.39-1.x86_64.rpm
-rpm -Uhv nova-agent*
+#wget https://github.com/rackerlabs/openstack-guest-agents-unix/releases/download/1.39.1/nova-agent-1.39-1.x86_64.rpm
+#rpm -Uhv nova-agent*
+wget --no-check-certificate http://KICK_HOST/nova-agent/nova-agent-Linux-x86_64-1.39.1.tar.gz
+tar xzvf nova-agent*.tar.gz
+sh installer.sh
+chkconfig nova-agent on
 
 # set some stuff
 echo 'net.ipv4.conf.eth0.arp_notify = 1' >> /etc/sysctl.conf
@@ -274,11 +277,11 @@ rm -f /etc/extlinux.conf
 ln -s /boot/extlinux.conf /etc/extlinux.conf
 
 # nova-agent and krb5-libs conflict workaround
-cat > /etc/dnf/protected.d/dnf.conf <<'EOF'
-dnf
-krb5-libs
-nova-agent
-EOF
+#cat > /etc/dnf/protected.d/dnf.conf <<'EOF'
+#dnf
+#krb5-libs
+#nova-agent
+#EOF
 
 # log packages
 wget http://KICK_HOST/kickstarts/package_postback.sh
