--- a/Ubuntu_12.04_PVHVM.cfg
+++ b/Ubuntu_12.04_PVHVM.cfg
@@ -83,6 +83,10 @@ parted
 
 %post
 
+# update
+apt-get update
+apt-get -y dist-upgrade
+
 # fix bootable flag
 parted -s /dev/xvda set 1 boot on
 
@@ -105,6 +109,14 @@ disable_root: False
 ssh_pwauth: True
 ssh_deletekeys: False
 resize_rootfs: True
+cloud_init_modules:
+ - resizefs
+ - set_hostname
+ - update_hostname
+ - update_etc_hosts
+ - ca-certs
+ - rsyslog
+ - ssh
 EOF
 
 # cloud-init kludges
@@ -121,7 +133,7 @@ echo -n > /lib/udev/rules.d/75-persistent-net-generator.rules
 # both the above and preseed values quit working :(
 cat > /etc/cloud/cloud.cfg.d/90_dpkg.cfg <<'EOF'
 # to update this file, run dpkg-reconfigure cloud-init
-datasource_list: [ ConfigDrive ]
+datasource_list: [ ConfigDrive , NoCloud ]
 EOF
 
 # minimal network conf that doesnt dhcp 
@@ -193,10 +205,6 @@ EOF
 sed -i 's/#GRUB_DISABLE_LINUX_UUID.*/GRUB_DISABLE_LINUX_UUID="true"/g' /etc/default/grub
 sed -i 's/GRUB_CMDLINE_LINUX=.*/GRUB_CMDLINE_LINUX="cgroup_enable=memory swapaccount=1"/g' /etc/default/grub
 update-grub
-
-# update
-apt-get update
-apt-get -y dist-upgrade
 
 # set ssh keys to regenerate at first boot if missing
 # this is a fallback to catch when cloud-init fails doing the same
