--- a/CentOS_6_Teeth_Hadoop_Ambari.cfg
+++ b/CentOS_6_Teeth_Hadoop_Ambari.cfg
@@ -56,12 +56,10 @@ cloud-utils
 cloud-utils-growpart
 dracut-modules-growroot
 yum-plugin-versionlock
-#pyserial
 python-jinja2
 python-oauth
 rsyslog
 python-pip
-mdadm
 
 %end
 
@@ -76,9 +74,9 @@ echo "################################"
 # tmp tmp
 mkdir /tmp/tmp
 cd /tmp/tmp
-wget http://KICK_HOST/kickstarts/CentOS_6_Teeth_post.sh
-chmod +x CentOS_6_Teeth_post.sh
-bash -x CentOS_6_Teeth_post.sh
+wget http://KICK_HOST/kickstarts/CentOS_6_Teeth_Hadoop_Ambari_post.sh
+chmod +x CentOS_6_Teeth_Hadoop_Ambari_post.sh
+bash -x CentOS_6_Teeth_Hadoop_Ambari_post.sh
 for k in $(find /var/log -type f); do echo > $k; done
 ) 2>&1 | /usr/bin/tee /var/log/post_install_chvt.log
 chvt 1
