--- a/Fedora_22_Teeth.cfg
+++ b/Fedora_22_Teeth.cfg
@@ -2,19 +2,32 @@
 # https://git.fedorahosted.org/cgit/cloud-kickstarts.git/tree/generic
 # thanks Fedora!
 
+%pre --log=/tmp/log
+#!/bin/bash
+dd if=/dev/zero of=/dev/xvda bs=512 count=1
+parted -s /dev/xvda mklabel msdos
+partprobe
+%end
+
 # Install, not upgrade
 install
 #cmdline
 
 # Install from a friendly mirror and add updates
 #url --url=http://dl.fedoraproject.org/pub/fedora/linux/releases/22/Server/x86_64/os/
-url --url=http://dl.fedoraproject.org/pub/fedora/linux/development/22/x86_64/os/
 #repo --name=fedora --baseurl=http://dl.fedoraproject.org/pub/fedora/linux/releases/22/Everything/x86_64/os/
-#repo --name=fedora --baseurl=http://dl.fedoraproject.org/pub/fedora/linux/releases/22/Server/x86_64/os/
-#url --url=http://dl.fedoraproject.org/pub/fedora/linux/releases/test/22_Beta/Server/x86_64/os/
+
+url --url=http://mirror.rackspace.com/fedora/releases/22/Server/x86_64/os/
+repo --name=fedora --baseurl=http://mirror.rackspace.com/fedora/releases/22/Everything/x86_64/os/
+
+#url --url=http://dl.fedoraproject.org/pub/fedora/linux/releases/22/Server/x86_64/os/
+#url --url=http://dl.fedoraproject.org/pub/fedora/linux/development/22/x86_64/os/
+#
+#repo --name=fedora --baseurl=http://dl.fedoraproject.org/pub/fedora/linux/releases/22/Everything/x86_64/os/
+#repo --name=fedora-server --baseurl=http://dl.fedoraproject.org/pub/fedora/linux/releases/22/Server/x86_64/os/
 #
 #repo --name=fedora --baseurl=http://dl.fedoraproject.org/pub/fedora/linux/development/22/x86_64/os/
-repo --name=fedora --baseurl=http://dl.fedoraproject.org/pub/fedora/linux/updates/22/x86_64/
+#repo --name=fedora --baseurl=http://dl.fedoraproject.org/pub/fedora/linux/updates/22/x86_64/
 
 # Language and keyboard setup
 lang en_US.UTF-8
@@ -84,6 +97,7 @@ yum-plugin-versionlock
 # really, no thanks grub2
 #-grub2-tools
 #-grub2
+mdadm
 
 %end
 
@@ -292,7 +306,7 @@ EOF
 cat > /etc/sysconfig/autofsck << EOF
 AUTOFSCK_DEF_CHECK=yes
 PROMPT=no
-AUTOFSCK_OPT=“-y”
+AUTOFSCK_OPT="-y"
 AUTOFSCK_TIMEOUT=10
 EOF
 
