--- a/Ubuntu_15.04_PVHVM_Antlia.cfg
+++ b/Ubuntu_15.04_PVHVM_Antlia.cfg
@@ -38,7 +38,7 @@ zerombr yes
 clearpart --initlabel --drives=xvda
 
 #Disk partitioning information
-part / --fstype ext3 --size=1024 --grow --asprimary 
+part / --fstype ext4 --size=1024 --grow --asprimary 
 
 #System authorization infomation
 auth  --useshadow  --enablemd5 
@@ -54,11 +54,12 @@ preseed finish-install/reboot_in_progress note
 preseed partman/mount_style select traditional
 preseed user-setup/allow-password-weak boolean true
 preseed cdrom-detect/eject boolean false
-preseed cloud-init/datasources string ConfigDrive
+#preseed cloud-init cloud-init/datasources multiselect None, ConfigDrive
+preseed cloud-init/datasources string None, ConfigDrive
 
 # apt preseeds, note the release versions here
 preseed apt-setup/security_host string mirror.rackspace.com
-preseed apt-setup/security_path string /ubuntu precise-security
+preseed apt-setup/security_path string /ubuntu vivid-security
 preseed apt-setup/use_mirror boolean true
 preseed mirror/protocol string http
 preseed mirror/country string manual
@@ -70,17 +71,29 @@ preseed mirror/http/proxy string
 preseed base-installer/install-recommends boolean false
 preseed pkgsel/install-language-support boolean false
 
+# grub changes
+preseed grub-installer/bootdev  string /dev/xvda
+preseed grub-installer/only_debian boolean true
+preseed grub-installer/with_other_os boolean true
+
 # packages
 %packages
 openssh-server
 cloud-init
+cloud-initramfs-dyn-netconf
+cloud-initramfs-growroot
 rsync
 tar
 wget
 curl
+python
 parted
 
 %post
+
+# update
+apt-get update
+apt-get -y dist-upgrade
 
 # fix bootable flag
 parted -s /dev/xvda set 1 boot on
@@ -97,39 +110,30 @@ dpkg -i xe-guest-utilities_6.2.0-1120_amd64.deb
 wget https://github.com/rackerlabs/openstack-guest-agents-unix/releases/download/1.39.1/nova-agent_1.39.1_all.deb
 dpkg -i nova-agent*
 
-# cloud-init kludges
-addgroup --system --quiet netdev
-echo -n > /etc/udev/rules.d/70-persistent-net.rules
-echo -n > /lib/udev/rules.d/75-persistent-net-generator.rules
-
 # our cloud-init config
 cat > /etc/cloud/cloud.cfg.d/10_rackspace.cfg <<'EOF'
 apt_preserve_sources_list: True
 disable_root: False
 ssh_pwauth: True
 ssh_deletekeys: False
-resize_rootfs: False
-cloud_init_modules:
- - resizefs
- - set_hostname
- - update_hostname
- - update_etc_hosts
- - ca-certs
- - rsyslog
- - ssh
+resize_rootfs: noblock
 EOF
-touch /etc/growroot-disabled
+
+# cloud-init kludges
+addgroup --system --quiet netdev
+echo -n > /etc/udev/rules.d/70-persistent-net.rules
+echo -n > /lib/udev/rules.d/75-persistent-net-generator.rules
 
 # cloud-init must be beaten with hammer
 # preseeding these values isnt working, forcing it here
-#echo "cloud-init cloud-init/datasources string ConfigDrive" > /tmp/tmp/debconf-selections
+#echo "cloud-init cloud-init/datasources multiselect None, ConfigDrive" > /tmp/tmp/debconf-selections
 #/usr/bin/debconf-set-selections /tmp/tmp/debconf-selections
 #dpkg-reconfigure cloud-init
 
 # both the above and preseed values quit working :(
 cat > /etc/cloud/cloud.cfg.d/90_dpkg.cfg <<'EOF'
 # to update this file, run dpkg-reconfigure cloud-init
-datasource_list: [ ConfigDrive ]
+datasource_list: [ ConfigDrive, None ]
 EOF
 
 # minimal network conf that doesnt dhcp 
@@ -173,82 +177,87 @@ cat > /etc/fstab <<'EOF'
 # that works even if disks are added and removed. See fstab(5).
 #
 # <file system> <mount point>   <type>  <options>       <dump>  <pass>
-/dev/xvda1	/               ext3    errors=remount-ro,noatime,barrier=0 0       1
+/dev/xvda1	/               ext4    errors=remount-ro,noatime,barrier=0 0       1
 #/dev/xvdc1	none            swap    sw              0       0
 EOF
-#xenfs           /proc/xen       xenfs   defaults    0    0
+
+# cloud-init / nova-agent sad panda hacks
+cat > /lib/systemd/system/cloud-init-local.service <<'EOF'
+[Unit]
+Description=Initial cloud-init job (pre-networking)
+Wants=local-fs.target
+After=local-fs.target
+
+[Service]
+Type=oneshot
+ExecStartPre=/bin/sleep 60
+ExecStart=/usr/bin/cloud-init init --local
+RemainAfterExit=yes
+TimeoutSec=0
+
+# Output needs to appear in instance console output
+StandardOutput=journal+console
+
+[Install]
+WantedBy=multi-user.target
+EOF
 
 # keep grub2 from using UUIDs and regenerate config
 sed -i 's/#GRUB_DISABLE_LINUX_UUID.*/GRUB_DISABLE_LINUX_UUID="true"/g' /etc/default/grub
 sed -i 's/GRUB_CMDLINE_LINUX=.*/GRUB_CMDLINE_LINUX="cgroup_enable=memory swapaccount=1"/g' /etc/default/grub
+sed -i 's/GRUB_CMDLINE_LINUX_DEFAULT.*/GRUB_CMDLINE_LINUX_DEFAULT="console=tty1 splash quiet"/g' /etc/default/grub
+sed -i 's/GRUB_TIMEOUT.*/GRUB_TIMEOUT=10/g' /etc/default/grub
+sed -i 's/GRUB_HIDDEN_TIMEOUT.*/GRUB_HIDDEN_TIMEOUT=10/g' /etc/default/grub
 update-grub
-
-# cloud-init / nova-agent sad panda hacks
-cat > /etc/init/cloud-init-local.conf <<'EOF'
-# cloud-init - the initial cloud-init job
-#   crawls metadata service, emits cloud-config
-start on mounted MOUNTPOINT=/
-
-task
-
-console output
-
-pre-start script
-	/etc/init.d/xe-linux-distribution start
-	sleep 2
-	/etc/init.d/nova-agent start
-	sleep 13
-end script
-
-exec /usr/bin/cloud-init init --local 
-EOF
-
-# update
-apt-get update
-apt-get -y dist-upgrade
-
-# grub legacy for PV Xen guests
-apt-get -y remove --purge grub*
-rm -rf /boot/grub*
-apt-get -y install grub-legacy-ec2
-sed -i 's/# kopt=.*/# kopt=root=\/dev\/xvda1 console=hvc0 ro quiet splash/' /boot/grub/menu.lst
-sed -i 's/# indomU.*/# indomU=false/' /boot/grub/menu.lst
-update-grub-legacy-ec2 -y
 
 # set ssh keys to regenerate at first boot if missing
 # this is a fallback to catch when cloud-init fails doing the same
 # it will do nothing if the keys already exist
 cat > /etc/rc.local <<'EOF'
+#!/bin/sh
 dpkg-reconfigure openssh-server
-echo > /etc/rc.local
-EOF
-
-# console fix for PV Ubuntus
-cat > /etc/init/hvc0.conf <<'EOF'
-
-# hvc0 - getty
-#
-# This service maintains a getty on hvc0 from the point the system is
-# started until it is shut down again.
-
-start on stopped rc or RUNLEVEL=[2345]
-stop on runlevel [!2345]
-
-respawn
-exec /sbin/getty -L 115200 hvc0 vt102
+echo '#!/bin/sh' > /etc/rc.local
 EOF
 
 # stop nova-agent from starting twice since we start it from cloud-init now
-update-rc.d -f nova-agent remove
-update-rc.d -f xe-linux-distribution remove 
+#update-rc.d -f nova-agent remove
+#update-rc.d -f xe-linux-distribution remove
+
+# some systemd workarounds
+sed -i 's/XenServer Virtual Machine Tools/xe-linux-distribution/g' /etc/init.d/xe-linux-distribution
+update-rc.d xe-linux-distribution defaults
+
+# intention is to move this bit into nova-agent instead
+cat > /lib/systemd/system/nova-agent.service <<'EOF'
+[Unit]
+Description=nova-agent
+Wants=local-fs.target
+After=local-fs.target xe-linux-distribution.service
+
+[Service]
+Type=oneshot
+ExecStart=/etc/init.d/nova-agent start
+RemainAfterExit=yes
+TimeoutSec=0
+
+# Output needs to appear in instance console output
+StandardOutput=journal+console
+
+[Install]
+WantedBy=multi-user.target
+EOF
+systemctl enable nova-agent
 
 cat > /etc/apt/apt.conf.d/00InstallRecommends <<'EOF'
 APT::Install-Recommends "true";
 EOF
 
+# the beta version didn't do this, but release set it to "without-password" which fails
+sed -i 's/PermitRootLogin.*/PermitRootLogin yes/g' /etc/ssh/sshd_config
+
 # log packages
 wget http://KICK_HOST/kickstarts/package_postback.sh
-bash package_postback.sh Ubuntu_12.04
+bash package_postback.sh Ubuntu_15.04_PVHVM
 
 # clean up
 passwd -d root
