Adds Fedora23 and fixes for cloud-init fstab mangling

--- a/CentOS_7_Teeth.cfg
+++ b/CentOS_7_Teeth.cfg
@@ -201,10 +201,11 @@ system_info:
     name: root
     lock_passwd: True
 ssh_svcname: ssh
-
+mounts:
+ - [ ephemeral0, null ]
+ 
 cloud_config_modules:
  - disk_setup
- - mounts
  - ssh-import-id
  - locale
  - set-passwords
@@ -218,7 +219,7 @@ cloud_config_modules:
  - disable-ec2-metadata
  - runcmd
  - byobu
-
+ 
 cloud_init_modules:
  - migrator
  - bootcmd
