--- a/Fedora_23_PVHVM.cfg
+++ b/Fedora_23_PVHVM.cfg
@@ -53,7 +53,7 @@ bootloader --disabled
 shutdown --eject
 
 # Minimal package set
-%packages --excludedocs --nobase
+%packages --excludedocs
 @core
 kernel
 grubby
