--- a/CentOS_7_PVHVM.cfg
+++ b/CentOS_7_PVHVM.cfg
@@ -198,6 +198,26 @@ rpm -Uhv xe-guest-utilities*.rpm
 wget https://github.com/rackerlabs/openstack-guest-agents-unix/releases/download/1.39.1/nova-agent-1.39-1.x86_64.rpm
 rpm -Uhv nova-agent*
 
+# cent/rhel 7 kernel fixes, otherwise systemd-python breaks nova-agent
+cat > /usr/lib/systemd/system/nova-agent.service <<'EOF'
+[Unit]
+Description=nova-agent service
+After=xe-linux-distribution.service
+[Service]
+EnvironmentFile=/etc/nova-agent.env
+ExecStart=/usr/sbin/nova-agent -n -l info /usr/share/nova-agent/nova-agent.py
+[Install]
+WantedBy=multi-user.target
+EOF
+
+cat > /etc/nova-agent.env <<'EOF'
+LD_LIBRARY_PATH="${LD_LIBRARY_PATH}:/usr/share/nova-agent/1.39.1/lib"
+PYTHONPATH="${PYTHONPATH}:/usr/share/nova-agent/1.39.1/lib/python2.6/site-packages:/usr/share/nova-agent/1.39.1/lib/python2.6/"
+EOF
+
+systemctl daemon-reload
+chkconfig nova-agent on
+
 # set some stuff
 echo 'net.ipv4.conf.eth0.arp_notify = 1' >> /etc/sysctl.conf
 echo 'vm.swappiness = 0' >> /etc/sysctl.conf
