OMv2 changes for Fedora 22 as documented in wiki
Changes made as documented here:
https://one.rackspace.com/display/teeth/Intel+RSTe+Required+Images+Changes

--- a/Fedora_22_Teeth.cfg
+++ b/Fedora_22_Teeth.cfg
@@ -123,6 +123,7 @@ yum -y update
 yum -y upgrade
 
 parted -s /dev/sda set 1 boot on
+e2label /dev/sda1 root
 
 # tmp tmp
 mkdir /tmp/tmp
@@ -238,7 +239,7 @@ EOF
 
 # our fstab is fonky
 cat > /etc/fstab <<'EOF'
-/dev/sda1 / ext4 errors=remount-ro,noatime 0 1
+LABEL=root / ext4 errors=remount-ro,noatime 0 1
 EOF
 
 # set rackspace mirrors
@@ -278,7 +279,7 @@ default linux
 
 LABEL linux
       KERNEL /boot/vmlinuz-$version
-      APPEND root=/dev/sda1 console=ttyS4,115200n8 8250.nr_uarts=5 modprobe.blacklist=mei_me net.ifnames=0 biosdevname=0
+      APPEND root=LABEL=root console=ttyS4,115200n8 8250.nr_uarts=5 modprobe.blacklist=mei_me net.ifnames=0 biosdevname=0 rd.auto=0
       initrd /boot/initramfs-$version.img
 EOF
 rm -f /etc/extlinux.conf
@@ -291,6 +292,8 @@ cat > /etc/modules-load.d/bonding.conf <<'EOF'
 bonding
 8021q
 EOF
+
+echo 'add_dracutmodules+="mdraid"' >> /etc/dracut.conf
 
 dracut --regenerate-all --force
 
