--- a/Fedora_21_Teeth.cfg
+++ b/Fedora_21_Teeth.cfg
@@ -104,6 +104,7 @@ yum -y update
 yum -y upgrade
 
 parted -s /dev/sda set 1 boot on
+e2label /dev/sda1 root
 
 # tmp tmp
 mkdir /tmp/tmp
@@ -216,7 +217,7 @@ EOF
 
 # our fstab is fonky
 cat > /etc/fstab <<'EOF'
-/dev/sda1 / ext4 errors=remount-ro,noatime 0 1
+LABEL=root / ext4 errors=remount-ro,noatime 0 1
 EOF
 
 # set rackspace mirrors
@@ -275,7 +276,7 @@ default linux
 
 LABEL linux
       KERNEL /boot/vmlinuz-$version
-      APPEND root=/dev/sda1 console=ttyS4,115200n8 8250.nr_uarts=5 modprobe.blacklist=mei_me net.ifnames=0 biosdevname=0
+      APPEND root=LABEL=root console=ttyS4,115200n8 8250.nr_uarts=5 modprobe.blacklist=mei_me net.ifnames=0 biosdevname=0 rd.auto=0
       initrd /boot/initramfs-$version.img
 EOF
 rm -f /etc/extlinux.conf
@@ -289,6 +290,7 @@ bonding
 8021q
 EOF
 
+echo 'add_dracutmodules+="mdraid"' >> /etc/dracut.conf
 dracut --regenerate-all --force
 
 sed -i 's/WARNING/DEBUG/g' /etc/cloud/cloud.cfg.d/05_logging.cfg
