OMv2 Changes for CentOS 7
Changes as documented in the wiki for OnMetal v2 CentOS 7 support:
https://one.rackspace.com/display/teeth/Intel+RSTe+Required+Images+Changes

--- a/CentOS_7_Teeth.cfg
+++ b/CentOS_7_Teeth.cfg
@@ -40,7 +40,7 @@ text
 zerombr
 clearpart --all --initlabel
 part / --fstype=ext4 --grow --asprimary
-bootloader --location=mbr --boot-drive=sda --timeout=1 --append="root=/dev/sda1 console=ttyS4,115200n8 8250.nr_uarts=5 modprobe.blacklist=mei_me"
+bootloader --location=mbr --boot-drive=sda --timeout=1 --append="root=LABEL=root modprobe.blacklist=mei_me rd.auto=1"
 
 # Shutdown when the kickstart is done
 shutdown
@@ -203,7 +203,7 @@ system_info:
 ssh_svcname: ssh
 mounts:
  - [ ephemeral0, null ]
- 
+
 cloud_config_modules:
  - disk_setup
  - ssh-import-id
@@ -219,7 +219,7 @@ cloud_config_modules:
  - disable-ec2-metadata
  - runcmd
  - byobu
- 
+
 cloud_init_modules:
  - migrator
  - bootcmd
@@ -244,8 +244,8 @@ sed -i 's/ - \[ \*log_base, \*log_syslog ]/# - \[ \*log_base, \*log_syslog ]/g' 
 # force grub to use generic disk labels, bootloader above does not do this
 cat >> /etc/sysconfig/grub <<'EOF'
 GRUB_DISABLE_LINUX_UUID="true"
+GRUB_DEVICE_LABEL="root"
 EOF
-grub2-mkconfig
 
 # another teeth specific
 echo "bonding" >> /etc/modules
@@ -257,10 +257,20 @@ T0:23:respawn:/sbin/getty -L ttyS0 115200 xterm
 T4:23:respawn:/sbin/getty -L ttyS4 115200 xterm
 EOF
 
-# our fstab is fonky
-#cat > /etc/fstab <<'EOF'
-#/dev/sda1 / ext4 errors=remount-ro 0 1
-#EOF
+# Ensure fstab uses root label
+cat > /etc/fstab <<'EOF'
+LABEL=root / ext4 errors=remount-ro 0 1
+EOF
+
+# Append our configuration to existing config which is fully commented out
+cat >> /etc/dracut.conf <<'EOF'
+add_dracutmodules+="mdraid"
+add_drivers+="isci"
+EOF
+
+# regenerate dracut and grub configs
+dracut --regenerate-all --force
+grub2-mkconfig
 
 # log packages
 wget http://KICK_HOST/kickstarts/package_postback.sh
