Raid compat changes

--- a/CentOS_7_Teeth.cfg
+++ b/CentOS_7_Teeth.cfg
@@ -247,6 +247,9 @@ GRUB_DISABLE_LINUX_UUID="true"
 GRUB_DEVICE_LABEL="root"
 EOF
 
+# set root dev label
+e2label /dev/sda1 root
+
 # another teeth specific
 echo "bonding" >> /etc/modules
 echo "8021q" >> /etc/modules
