--- a/Debian_7_Teeth.cfg
+++ b/Debian_7_Teeth.cfg
@@ -64,7 +64,7 @@ tasksel tasksel/first multiselect minimal
 
 ### Package selection
 cloud-init cloud-init/datasources multiselect None, ConfigDrive
-d-i pkgsel/include string openssh-server sudo rsync wget parted debconf-utils cloud-init cloud-initramfs-dyn-netconf cloud-initramfs-growroot ifenslave-2.6 vlan curl python-jinja2 python-markupsafe python-pkg-resources python-serial python-six python-pip mdadm
+d-i pkgsel/include string openssh-server sudo rsync wget parted debconf-utils cloud-init cloud-initramfs-dyn-netconf cloud-initramfs-growroot ifenslave-2.6 vlan curl python-jinja2 python-markupsafe python-pkg-resources python-serial python-six python-pip mdadm initramfs-tools
 
 # Whether to upgrade packages after debootstrap.
 # Allowed values: none, safe-upgrade, full-upgrade
