--- a/Ubuntu_15.10_Teeth.cfg
+++ b/Ubuntu_15.10_Teeth.cfg
@@ -56,11 +56,11 @@ preseed finish-install/reboot_in_progress note
 preseed partman/mount_style select traditional
 preseed user-setup/allow-password-weak boolean true
 preseed cdrom-detect/eject boolean false
-preseed cloud-init/datasources string NoCloud, ConfigDrive
+#preseed cloud-init/datasources string NoCloud, ConfigDrive
 
 # apt preseeds, note the release versions here
 preseed apt-setup/security_host string mirror.rackspace.com
-preseed apt-setup/security_path string /ubuntu trusty-security
+preseed apt-setup/security_path string /ubuntu vivid-security
 preseed apt-setup/use_mirror boolean true
 preseed mirror/protocol string http
 preseed mirror/country string manual
@@ -90,8 +90,13 @@ python3-serial
 python3-yaml
 python-jsonpatch
 python-oauthlib
-init-system-helpers
-python-pip
+python-jwt
+python-six
+python-prettytable
+python-serial
+python-configobj
+python-yaml
+python-requests
 mdadm
 
 %post 
@@ -100,6 +105,6 @@ mdadm
 # tmp tmp
 mkdir /tmp/tmp
 cd /tmp/tmp
-wget http://KICK_HOST/kickstarts/Ubuntu_14.04_Teeth_v2_post.sh
-chmod +x Ubuntu_14.04_Teeth_v2_post.sh
-bash Ubuntu_14.04_Teeth_v2_post.sh
+wget http://KICK_HOST/kickstarts/Ubuntu_15.10_Teeth_post.sh
+chmod +x Ubuntu_15.10_Teeth_post.sh
+bash Ubuntu_15.10_Teeth_post.sh
