--- a/Debian_Unstable_Teeth.cfg
+++ b/Debian_Unstable_Teeth.cfg
@@ -68,7 +68,7 @@ tasksel tasksel/first multiselect minimal
 
 ### Package selection
 cloud-init cloud-init/datasources multiselect None, ConfigDrive
-d-i pkgsel/include string openssh-server sudo rsync firmware-linux-free wget parted debconf-utils cloud-init cloud-initramfs-dyn-netconf cloud-initramfs-growroot ifenslave-2.6 vlan curl python3-serial python3-yaml python3-jinja2 python3-prettytable python3-oauthlib python3-configobj python3-requests python3-jsonpatch python3-six cloud-utils util-linux mdadm
+d-i pkgsel/include string openssh-server sudo rsync firmware-linux-free wget parted debconf-utils cloud-init cloud-initramfs-dyn-netconf cloud-initramfs-growroot ifenslave-2.6 vlan curl python3-serial python3-yaml python3-jinja2 python3-prettytable python3-oauthlib python3-configobj python3-requests python3-jsonpatch python3-six cloud-utils util-linux mdadm initramfs-tools
 
 # Whether to upgrade packages after debootstrap.
 # Allowed values: none, safe-upgrade, full-upgrade
