--- a/Fedora_23_Teeth.cfg
+++ b/Fedora_23_Teeth.cfg
@@ -14,11 +14,11 @@ install
 #cmdline
 
 # Install from a friendly mirror and add updates
-url --url=http://dl.fedoraproject.org/pub/fedora/linux/releases/23/Server/x86_64/os/
-repo --name=fedora --baseurl=http://dl.fedoraproject.org/pub/fedora/linux/releases/23/Everything/x86_64/os/
+#url --url=http://dl.fedoraproject.org/pub/fedora/linux/releases/22/Server/x86_64/os/
+#repo --name=fedora --baseurl=http://dl.fedoraproject.org/pub/fedora/linux/releases/22/Everything/x86_64/os/
 
-#url --url=http://mirror.rackspace.com/fedora/releases/22/Server/x86_64/os/
-#repo --name=fedora --baseurl=http://mirror.rackspace.com/fedora/releases/22/Everything/x86_64/os/
+url --url=http://mirror.rackspace.com/fedora/releases/23/Server/x86_64/os/
+repo --name=fedora --baseurl=http://mirror.rackspace.com/fedora/releases/23/Everything/x86_64/os/
 
 #url --url=http://dl.fedoraproject.org/pub/fedora/linux/releases/22/Server/x86_64/os/
 #url --url=http://dl.fedoraproject.org/pub/fedora/linux/development/22/x86_64/os/
@@ -83,6 +83,7 @@ tar
 wget
 curl
 python-jsonpatch
+python-prettytable
 pyserial
 python-jinja2
 python-oauth2
@@ -123,6 +124,7 @@ yum -y update
 yum -y upgrade
 
 parted -s /dev/sda set 1 boot on
+e2label /dev/sda1 root
 
 # tmp tmp
 mkdir /tmp/tmp
@@ -238,7 +240,7 @@ EOF
 
 # our fstab is fonky
 cat > /etc/fstab <<'EOF'
-/dev/sda1 / ext4 errors=remount-ro,noatime 0 1
+LABEL=root / ext4 errors=remount-ro,noatime 0 1
 EOF
 
 # set rackspace mirrors
@@ -278,7 +280,7 @@ default linux
 
 LABEL linux
       KERNEL /boot/vmlinuz-$version
-      APPEND root=/dev/sda1 console=ttyS4,115200n8 8250.nr_uarts=5 modprobe.blacklist=mei_me net.ifnames=0 biosdevname=0
+      APPEND root=LABEL=root console=ttyS4,115200n8 8250.nr_uarts=5 modprobe.blacklist=mei_me net.ifnames=0 biosdevname=0 rd.auto=1
       initrd /boot/initramfs-$version.img
 EOF
 rm -f /etc/extlinux.conf
@@ -291,6 +293,8 @@ cat > /etc/modules-load.d/bonding.conf <<'EOF'
 bonding
 8021q
 EOF
+
+echo 'add_dracutmodules+="mdraid"' >> /etc/dracut.conf
 
 dracut --regenerate-all --force
 
@@ -312,7 +316,7 @@ EOF
 
 # log packages
 wget http://KICK_HOST/kickstarts/package_postback.sh
-bash package_postback.sh Fedora_23_Teeth
+bash package_postback.sh Fedora_22_Teeth
 rm -rf /root/tmp
 echo "done"
 
