Updating OM images for OM v2

--- a/Fedora_23_Teeth.cfg
+++ b/Fedora_23_Teeth.cfg
@@ -82,22 +82,13 @@ rsync
 tar
 wget
 curl
-python-jsonpatch
-python-prettytable
-pyserial
-python-jinja2
-python-oauth2
 rsyslog
 which
 yum-plugin-versionlock
 -dracut-config-rescue
--biosdevname
 -plymouth
 -NetworkManager
 -iprutils
-# really, no thanks grub2
-#-grub2-tools
-#-grub2
 mdadm
 
 %end
@@ -151,8 +142,8 @@ echo "dns=none" >> /etc/NetworkManager/NetworkManager.conf
 
 # For cloud images, 'eth0' _is_ the predictable device name, since
 # we don't want to be tied to specific virtual (!) hardware
-rm -f /etc/udev/rules.d/70*
-ln -s /dev/null /etc/udev/rules.d/80-net-name-slot.rules
+#rm -f /etc/udev/rules.d/70*
+#ln -s /dev/null /etc/udev/rules.d/80-net-name-slot.rules
 
 # generic localhost names
 cat > /etc/hosts << EOF
@@ -172,6 +163,7 @@ systemctl enable cloud-final
 
 # temporary yum to dnf workaround
 sed -i 's%cmd.append("-t")%#cmd.append("-t")%' /usr/lib/python2.7/site-packages/cloudinit/distros/rhel.py
+sed -i 's%cmd.append("-t")%#cmd.append("-t")%' /usr/lib/python3.4/site-packages/cloudinit/distros/rhel.py
 
 # our cloud-init config
 cat > /etc/cloud/cloud.cfg.d/10_rackspace.cfg <<'EOF'
@@ -280,7 +272,7 @@ default linux
 
 LABEL linux
       KERNEL /boot/vmlinuz-$version
-      APPEND root=LABEL=root console=ttyS4,115200n8 8250.nr_uarts=5 modprobe.blacklist=mei_me net.ifnames=0 biosdevname=0 rd.auto=1
+      APPEND root=LABEL=root console=ttyS4,115200n8 8250.nr_uarts=5 modprobe.blacklist=mei_me rd.auto=1
       initrd /boot/initramfs-$version.img
 EOF
 rm -f /etc/extlinux.conf
