--- a/Fedora_22_Teeth.cfg
+++ b/Fedora_22_Teeth.cfg
@@ -90,7 +90,6 @@ rsyslog
 which
 yum-plugin-versionlock
 -dracut-config-rescue
--biosdevname
 -plymouth
 -NetworkManager
 -iprutils
@@ -150,8 +149,8 @@ echo "dns=none" >> /etc/NetworkManager/NetworkManager.conf
 
 # For cloud images, 'eth0' _is_ the predictable device name, since
 # we don't want to be tied to specific virtual (!) hardware
-rm -f /etc/udev/rules.d/70*
-ln -s /dev/null /etc/udev/rules.d/80-net-name-slot.rules
+#rm -f /etc/udev/rules.d/70*
+#ln -s /dev/null /etc/udev/rules.d/80-net-name-slot.rules
 
 # generic localhost names
 cat > /etc/hosts << EOF
@@ -235,6 +234,7 @@ net.core.wmem_max = 33554432
 net.ipv4.tcp_window_scaling = 1
 net.ipv4.tcp_timestamps = 1
 net.ipv4.tcp_sack = 1
+vm.dirty_ratio=5
 EOF
 
 # our fstab is fonky
@@ -279,7 +279,7 @@ default linux
 
 LABEL linux
       KERNEL /boot/vmlinuz-$version
-      APPEND root=LABEL=root console=ttyS4,115200n8 8250.nr_uarts=5 modprobe.blacklist=mei_me net.ifnames=0 biosdevname=0 rd.auto=1
+      APPEND root=LABEL=root console=ttyS4,115200n8 8250.nr_uarts=5 rd.fstab=no acpi=off noapic modprobe.blacklist=mei_me rd.auto=1
       initrd /boot/initramfs-$version.img
 EOF
 rm -f /etc/extlinux.conf
