use set-default for setting multi-user.target

--- a/Red_Hat_Enterprise_Linux_7_PVHVM.cfg
+++ b/Red_Hat_Enterprise_Linux_7_PVHVM.cfg
@@ -89,8 +89,7 @@ policycoreutils-python
 %post --log=/var/log/post_install.log
 # setup systemd to boot to the right runlevel
 echo -n "Setting default runlevel to multiuser text mode"
-rm -f /etc/systemd/system/default.target
-ln -s /lib/systemd/system/multi-user.target /etc/systemd/system/default.target
+systemctl set-default multi-user.target
 
 # If you want to remove rsyslog and just use journald, remove this!
 echo -n "Disabling persistent journal"
