--- a/CentOS_7_PVHVM_NovaAgent2.cfg
+++ b/CentOS_7_PVHVM_NovaAgent2.cfg
@@ -160,9 +160,9 @@ EOF
 
 # For cloud images, 'eth0' _is_ the predictable device name, since
 # we don't want to be tied to specific virtual (!) hardware
-echo -n > /etc/udev/rules.d/70-persistent-net.rules
-echo -n > /lib/udev/rules.d/75-persistent-net-generator.rules
-ln -s /dev/null /etc/udev/rules.d/80-net-name-slot.rules
+ln -sf /dev/null /etc/udev/rules.d/80-net-name-slot.rules
+ln -sf /dev/null /etc/udev/rules.d/75-persistent-net-generator.rules
+ln -sf /dev/null /etc/udev/rules.d/70-persistent-net.rules
 
 # simple eth0 config, again not hard-coded to the build hardware
 cat > /etc/sysconfig/network-scripts/ifcfg-eth0 << EOF
