Fix for log file truncation issues

--- a/CentOS_7_PVHVM.cfg
+++ b/CentOS_7_PVHVM.cfg
@@ -351,7 +351,8 @@ rm -f /etc/resolv.conf
 touch /etc/resolv.conf
 rm -f /etc/sysconfig/network-scripts/ifcfg-eth0
 rm -rf /var/var
-for k in $(find /var/log -type f); do echo > $k; done
+rm -rf /var/log/anaconda/
+for k in $(find /var/log -type f); do truncate -s 0 $k; done
 for k in $(find /tmp -type f); do rm -f $k; done
 # watch these lines, causing kick problems
 #for k in $(find /root -type f \ ( ! -iname ".*" \)); do rm -f $k; done
