--- a/Red_Hat_Enterprise_Linux_7_PVHVM.cfg
+++ b/Red_Hat_Enterprise_Linux_7_PVHVM.cfg
@@ -337,7 +337,8 @@ rm -f /root/.nano_history
 rm -f /root/.lesshst
 rm -f /root/.ssh/known_hosts
 rm -rf /tmp/tmp
-for k in $(find /var/log -type f); do echo > $k; done
+rm -rf /var/log/anaconda/
+for k in $(find /var/log -type f); do truncate -s 0 $k; done
 for k in $(find /tmp -type f); do rm -f $k; done
 rm -f /etc/yum.repos.d/rhel-source.repo
 # watch these lines, causing kick problems
