Fixing heat image

--- a/Ubuntu_14.04_PVHVM_Heat.cfg
+++ b/Ubuntu_14.04_PVHVM_Heat.cfg
@@ -225,13 +225,13 @@ EOF
 sed -i 's/PermitRootLogin.*/PermitRootLogin yes/g' /etc/ssh/sshd_config
 
 # Run Heat Scripts
-wget http://KICK_HOST/kickstarts/Heat_Dev_Unmanaged_PVHVM_post.sh
-chmod +x Heat_Dev_Unmanaged_PVHVM_post.sh
-bash -x Heat_Dev_Unmanaged_PVHVM_post.sh
+wget http://KICK_HOST/kickstarts/Ubuntu_14.04_PVHVM_Heat_post.sh
+chmod +x Ubuntu_14.04_PVHVM_Heat_post.sh
+bash -x Ubuntu_14.04_PVHVM_Heat_post.sh
 
 # log packages
 wget http://KICK_HOST/kickstarts/package_postback.sh
-bash package_postback.sh Heat_Dev_Unmanaged_PVHVM
+bash package_postback.sh Ubuntu_14.04_PVHVM_Heat
 
 # clean up
 passwd -d root
