--- a/CentOS_7_PVHVM.cfg
+++ b/CentOS_7_PVHVM.cfg
@@ -325,15 +325,13 @@ GRUB_DISABLE_LINUX_UUID="true"
 EOF
 grub2-mkconfig
 
-# fix dns
-echo "dns=none" >> /etc/NetworkManager/NetworkManager.conf
+# fix dns as NetworkManager conflicts with Nova-Agent
+/usr/bin/systemctl mask NetworkManager-wait-online.service
+/usr/bin/systemctl mask NetworkManager.service
 
 # log packages
 wget http://KICK_HOST/kickstarts/package_postback.sh
 bash package_postback.sh CentOS_7_PVHVM
-
-/usr/bin/systemctl disable NetworkManager-wait-online.service
-/usr/bin/systemctl disable NetworkManager.service
 
 # clean up
 passwd -d root
