--- a/Red_Hat_Enterprise_Linux_7_PVHVM.cfg
+++ b/Red_Hat_Enterprise_Linux_7_PVHVM.cfg
@@ -315,8 +315,9 @@ grub2-mkconfig
 wget http://dfw.rhn.rackspace.com/pub/rhn-org-trusted-ssl-cert-1.0-1.noarch.rpm
 rpm -Uvh rhn-org-trusted-ssl-cert*
 
-# fix dns
-echo "dns=none" >> /etc/NetworkManager/NetworkManager.conf
+# fix dns as NetworkManager conflicts with Nova-Agent
+/usr/bin/systemctl mask NetworkManager-wait-online.service
+/usr/bin/systemctl mask NetworkManager.service
 
 # log packages
 wget http://KICK_HOST/kickstarts/package_postback.sh
