Properly fix the network interfaces file by setting the preseed value and removing the other hacks around it

--- a/Ubuntu_14.04_PVHVM.cfg
+++ b/Ubuntu_14.04_PVHVM.cfg
@@ -56,6 +56,7 @@ preseed user-setup/allow-password-weak boolean true
 preseed cdrom-detect/eject boolean false
 #preseed cloud-init cloud-init/datasources multiselect None, ConfigDrive
 preseed cloud-init/datasources string None, ConfigDrive
+preseed netcfg/target_network_config string loopback
 
 # apt preseeds, note the release versions here
 preseed apt-setup/security_host string mirror.rackspace.com
@@ -129,13 +130,6 @@ echo -n > /lib/udev/rules.d/75-persistent-net-generator.rules
 cat > /etc/cloud/cloud.cfg.d/90_dpkg.cfg <<'EOF'
 # to update this file, run dpkg-reconfigure cloud-init
 datasource_list: [ ConfigDrive, None ]
-EOF
-
-# minimal network conf that doesnt dhcp 
-# causes boot delay if left out, no bueno
-cat > /etc/network/interfaces <<'EOF'
-auto lo
-iface lo inet loopback
 EOF
 
 # stage a clean hosts file
@@ -239,10 +233,6 @@ rm -f /var/cache/apt/*cache.bin
 rm -f /var/lib/apt/lists/*_Packages
 # breaks newest nova-agent if removed
 #rm -f /etc/resolv.conf
-# this file copies the installer's /etc/network/interfaces to the VM 
-# but we want to overwrite that with a "clean" file instead
-# so we must disable that copying action in kickstart/preseed
-rm -f /usr/lib/finish-install.d/55netcfg-copy-config
 rm -f /root/.bash_history
 rm -f /root/.nano_history
 rm -f /root/.lesshst
