Properly truncate/remove log files after build

--- a/Ubuntu_14.04_PVHVM.cfg
+++ b/Ubuntu_14.04_PVHVM.cfg
@@ -238,7 +238,10 @@ rm -f /root/.nano_history
 rm -f /root/.lesshst
 rm -f /root/.ssh/known_hosts
 rm -rf /tmp/tmp
-for k in $(find /var/log -type f); do echo > $k; done
-for k in $(find /tmp -type f); do rm -f $k; done
-for k in $(find /root -type f \( ! -iname ".*" \)); do rm -f $k; done
+find /var/log -type f -exec truncate -s 0 {} \;
+find /tmp -type f -delete
+find /root -type f ! -iname ".*" -delete
 
+%post --nochroot
+rm -f /usr/lib/finish-install.d/94save-logs
+%end
