--- a/Ubuntu_14.04_Teeth.cfg
+++ b/Ubuntu_14.04_Teeth.cfg
@@ -103,3 +103,7 @@ cd /tmp/tmp
 wget http://KICK_HOST/kickstarts/Ubuntu_14.04_Teeth_post.sh
 chmod +x Ubuntu_14.04_Teeth_post.sh
 bash Ubuntu_14.04_Teeth_post.sh
+
+%post --nochroot
+rm -f /usr/lib/finish-install.d/94save-logs
+%end
