--- a/Ubuntu_14.04.cfg
+++ b/Ubuntu_14.04.cfg
@@ -11,7 +11,7 @@ keyboard us
 timezone --utc Etc/UTC
 
 #Root password
-rootpw --plaintext novaagentneedsunlockedrootaccountsowedeletepasswordinpost
+rootpw novaagentneedsunlockedrootaccountsowedeletepasswordinpost
 
 #Initial user
 user --disabled
@@ -245,7 +245,6 @@ wget http://KICK_HOST/kickstarts/package_postback.sh
 bash package_postback.sh Ubuntu_14.04
 
 # clean up
-passwd -d root
 apt-get -y clean
 apt-get -y autoremove
 sed -i '/.*cdrom.*/d' /etc/apt/sources.list
@@ -265,5 +264,7 @@ find /tmp -type f -delete
 find /root -type f ! -iname ".*" -delete
 
 %post --nochroot
+# root password will be handled by nova-agent
+rm -f /usr/lib/finish-install.d/06user-setup
 rm -f /usr/lib/finish-install.d/94save-logs
 %end
