--- a/Fedora_22_Teeth.cfg
+++ b/Fedora_22_Teeth.cfg
@@ -67,6 +67,7 @@ bootloader --disabled
 # Shutdown when the kickstart is done
 shutdown --eject
 
+
 # Minimal package set
 %packages --excludedocs
 #--nobase
@@ -190,7 +191,6 @@ system_info:
 
 cloud_config_modules:
  - disk_setup
- - mounts
  - ssh-import-id
  - locale
  - set-passwords
@@ -279,7 +279,7 @@ default linux
 
 LABEL linux
       KERNEL /boot/vmlinuz-$version
-      APPEND root=LABEL=root console=ttyS4,115200n8 8250.nr_uarts=5 rd.fstab=no acpi=off noapic modprobe.blacklist=mei_me rd.auto=1
+      APPEND root=LABEL=root rd.fstab=no acpi=off noapic modprobe.blacklist=mei_me rd.auto=1
       initrd /boot/initramfs-$version.img
 EOF
 rm -f /etc/extlinux.conf
@@ -298,12 +298,6 @@ echo 'add_dracutmodules+="mdraid"' >> /etc/dracut.conf
 dracut --regenerate-all --force
 
 sed -i 's/WARNING/DEBUG/g' /etc/cloud/cloud.cfg.d/05_logging.cfg
-
-# more teeth console changes
-cat >> /etc/inittab <<'EOF'
-T0:23:respawn:/sbin/getty -L ttyS0 115200 xterm
-T4:23:respawn:/sbin/getty -L ttyS4 115200 xterm
-EOF
 
 # disable auto fsck on boot
 cat > /etc/sysconfig/autofsck << EOF
