--- a/Fedora_23_Teeth.cfg
+++ b/Fedora_23_Teeth.cfg
@@ -151,6 +151,8 @@ cat > /etc/hosts << EOF
 ::1         localhost localhost.localdomain localhost6 localhost6.localdomain6
 EOF
 
+# install cloud-init dependencies
+pip install argparse configobj jinja2 jsonpatch prettytable pyserial pyyaml oauth oauthlib six
 # custom cloud-init rpm
 wget http://KICK_HOST/cloud-init/cloud-init-0.7.7-el7.fc22.noarch.rpm
 #wget http://7b52f5445f1d047c988b-5b9b71e9a69b2db171149d34296914b6.r70.cf2.rackcdn.com/cloud-init-0.7.5-14rackspace.x86_64.rpm
@@ -184,7 +186,6 @@ system_info:
 
 cloud_config_modules:
  - disk_setup
- - mounts
  - ssh-import-id
  - locale
  - set-passwords
@@ -228,6 +229,7 @@ net.core.wmem_max = 33554432
 net.ipv4.tcp_window_scaling = 1
 net.ipv4.tcp_timestamps = 1
 net.ipv4.tcp_sack = 1
+vm.dirty_ratio=5
 EOF
 
 # our fstab is fonky
@@ -272,7 +274,7 @@ default linux
 
 LABEL linux
       KERNEL /boot/vmlinuz-$version
-      APPEND root=LABEL=root console=ttyS4,115200n8 8250.nr_uarts=5 modprobe.blacklist=mei_me rd.auto=1
+      APPEND root=LABEL=root rd.fstab=0 acpi=0 noapic modprobe.blacklist=mei_me rd.auto=1
       initrd /boot/initramfs-$version.img
 EOF
 rm -f /etc/extlinux.conf
@@ -292,12 +294,6 @@ dracut --regenerate-all --force
 
 sed -i 's/WARNING/DEBUG/g' /etc/cloud/cloud.cfg.d/05_logging.cfg
 
-# more teeth console changes
-cat >> /etc/inittab <<'EOF'
-T0:23:respawn:/sbin/getty -L ttyS0 115200 xterm
-T4:23:respawn:/sbin/getty -L ttyS4 115200 xterm
-EOF
-
 # disable auto fsck on boot
 cat > /etc/sysconfig/autofsck << EOF
 AUTOFSCK_DEF_CHECK=yes
@@ -308,7 +304,7 @@ EOF
 
 # log packages
 wget http://KICK_HOST/kickstarts/package_postback.sh
-bash package_postback.sh Fedora_22_Teeth
+bash package_postback.sh Fedora_23_Teeth
 rm -rf /root/tmp
 echo "done"
 
