Fixing F23 missing changes

--- a/Fedora_23_Teeth.cfg
+++ b/Fedora_23_Teeth.cfg
@@ -152,7 +152,7 @@ cat > /etc/hosts << EOF
 EOF
 
 # install cloud-init dependencies
-pip install argparse configobj jinja2 jsonpatch prettytable pyserial pyyaml oauth oauthlib six
+pip install argparse configobj jinja2 jsonpatch prettytable pyserial pyyaml oauth six
 # custom cloud-init rpm
 wget http://KICK_HOST/cloud-init/cloud-init-0.7.7-el7.fc22.noarch.rpm
 #wget http://7b52f5445f1d047c988b-5b9b71e9a69b2db171149d34296914b6.r70.cf2.rackcdn.com/cloud-init-0.7.5-14rackspace.x86_64.rpm
@@ -274,7 +274,7 @@ default linux
 
 LABEL linux
       KERNEL /boot/vmlinuz-$version
-      APPEND root=LABEL=root rd.fstab=0 acpi=0 noapic modprobe.blacklist=mei_me rd.auto=1
+      APPEND root=LABEL=root net.ifnames=0 biosdevname=0 rd.fstab=no acpi=off noapic modprobe.blacklist=mei_me rd.auto=1
       initrd /boot/initramfs-$version.img
 EOF
 rm -f /etc/extlinux.conf
