Revamp Fedora 23 kickstart: use newly packaged nova-agent and apply better practices to the images we're deploying

--- a/Fedora_23_PVHVM.cfg
+++ b/Fedora_23_PVHVM.cfg
@@ -1,5 +1,3 @@
-## ksline: net.ifnames=0 ks=http://<kick_host>/ks.cfg
-
 # Install, not upgrade
 install
 cmdline
@@ -125,28 +123,8 @@ wget http://ce3598b91333d7474379-b85ce4d8c2253d3876bef92f62a263f8.r84.cf5.rackcd
 rpm -Uhv xe-guest-utilities*.rpm
 
 # install nova-agent
-##wget http://KICK_HOST/nova-agent-0.2.1-1.fc23.noarch.rpm -O nova-agent.rpm
-##rpm -Uvh nova-agent.rpm
-wget http://KICK_HOST/nova-agent/nova-agent-1.39.1-1.fc23.tar.gz -O nova-agent.tgz
-tar xfzC nova-agent.tgz /
-
-# a systemd service file for nova-agent
-cat > /usr/lib/systemd/system/nova-agent.service <<'EOF'
-[Unit]
-Description=nova-agent service
-After=xe-linux-distribution.service
-[Service]
-EnvironmentFile=/etc/nova-agent.env
-ExecStart=/usr/sbin/nova-agent -n -l info /usr/share/nova-agent/nova-agent.py
-[Install]
-WantedBy=multi-user.target
-EOF
-
-cat > /etc/nova-agent.env <<'EOF'
-LD_LIBRARY_PATH="${LD_LIBRARY_PATH}:/usr/share/nova-agent/1.39.1/lib"
-PYTHONPATH="${PYTHONPATH}:/usr/share/nova-agent/1.39.1/lib/python2.7/site-packages:/usr/share/nova-agent/1.39.1/lib/python2.7/"
-EOF
-
+wget https://github.com/carlwgeorge/nova-agent-rpm/releases/download/1.39.1-2/nova-agent-1.39.1-2.fc23.x86_64.rpm -O nova-agent.rpm
+rpm -Uvh nova-agent.rpm
 systemctl daemon-reload
 systemctl enable nova-agent
 
@@ -177,27 +155,12 @@ sed -i '/metalink/s/^/#/' /etc/yum.repos.d/*.repo
 # update all
 dnf -y update
 
-# cloud-init fixes for nova-agent race condition
-###cat > /usr/lib/systemd/system/cloud-init-local.service <<'EOF'
-###[Unit]
-###Description=Initial cloud-init job (pre-networking)
-###Wants=local-fs.target
-###After=local-fs.target
-
-###[Service]
-###Type=oneshot
-###ExecStartPre=/usr/bin/sleep 20
-###ExecStart=/usr/bin/cloud-init init --local
-###RemainAfterExit=yes
-###TimeoutSec=0
-
-# Output needs to appear in instance console output
-###StandardOutput=journal+console
-
-###[Install]
-###WantedBy=multi-user.target
-###EOF
-
+# if cloud-init starts before nova-agent configures the network many things fail, so we'll delay for a bit
+mkdir -p /etc/systemd/system/cloud-init-local.service.d
+cat > /etc/systemd/system/cloud-init-local.service.d/delaystart.conf <<'EOF'
+[Service]
+ExecStartPre=/usr/bin/sleep 20
+EOF
 
 # log packages
 wget http://KICK_HOST/kickstarts/package_postback.sh
@@ -205,7 +168,7 @@ bash package_postback.sh Fedora_23_PVHVM
 
 # clean up
 passwd -d root
-yum clean all
+dnf clean all
 truncate -c -s 0 /etc/machine-id
 rm -rf /tmp/tools-install
 rm -f /installer.sh
@@ -216,9 +179,14 @@ rm -f /root/.bash_history
 rm -f /root/.nano_history
 rm -f /root/.lesshst
 rm -f /root/.ssh/known_hosts
-###rm -rf /var/log/anaconda/
-###find /var/log -type f ! -iname README -exec truncate -s 0 {} \;
+rm -rf /var/log/anaconda/
+find /var/log -type f ! -iname README -exec truncate -s 0 {} \;
 find /tmp -type f -delete
 find /root -type f ! -iname ".*" -delete
 
+%end
+
+# no need to keep Anaconda logs on every cloud server
+%pre
+rm -f /usr/share/anaconda/post-scripts/99-copy-logs.ks
 %end
