--- a/Red_Hat_Enterprise_Linux_5.cfg
+++ b/Red_Hat_Enterprise_Linux_5.cfg
@@ -123,6 +123,7 @@ cat > /etc/sysconfig/ip6tables <<'EOF'
 -A INPUT -p tcp -m tcp --dport 32768:61000 ! --syn -j ACCEPT
 -A INPUT -m tcp -p tcp --dport 22 -j ACCEPT
 -A INPUT -j REJECT --reject-with icmp6-adm-prohibited
+-A FORWARD -j REJECT --reject-with icmp6-adm-prohibited
 COMMIT
 EOF
 
