--- a/Red_Hat_Enterprise_Linux_5.cfg
+++ b/Red_Hat_Enterprise_Linux_5.cfg
@@ -118,7 +118,7 @@ cat > /etc/sysconfig/ip6tables <<'EOF'
 :FORWARD ACCEPT [0:0]
 :OUTPUT ACCEPT [0:0]
 -A INPUT -i lo -j ACCEPT
--A INPUT -p icmpv6 -j ACCEPT
+-A INPUT -p ipv6-icmp -j ACCEPT
 -A INPUT -p udp -m udp --dport 32768:61000 -j ACCEPT
 -A INPUT -p tcp -m tcp --dport 32768:61000 ! --syn -j ACCEPT
 -A INPUT -m tcp -p tcp --dport 22 -j ACCEPT
