Fix repos and streamline nova-agent install

--- a/Fedora_23_PVHVM.cfg
+++ b/Fedora_23_PVHVM.cfg
@@ -4,8 +4,6 @@ cmdline
 
 # Install from a friendly mirror and add updates
 url --url=http://mirror.rackspace.com/fedora/releases/23/Server/x86_64/os/
-repo --name=fedora --baseurl=http://mirror.rackspace.com/fedora/releases/23/Everything/x86_64/os/
-
 
 # Language and keyboard setup
 lang en_US.UTF-8
@@ -123,9 +121,7 @@ wget http://ce3598b91333d7474379-b85ce4d8c2253d3876bef92f62a263f8.r84.cf5.rackcd
 rpm -Uhv xe-guest-utilities*.rpm
 
 # install nova-agent
-wget https://github.com/carlwgeorge/nova-agent-rpm/releases/download/1.39.1-2/nova-agent-1.39.1-2.fc23.x86_64.rpm -O nova-agent.rpm
-rpm -Uvh nova-agent.rpm
-systemctl daemon-reload
+rpm -U https://github.com/carlwgeorge/nova-agent-rpm/releases/download/1.39.1-2/nova-agent-1.39.1-2.fc23.x86_64.rpm
 systemctl enable nova-agent
 
 
@@ -149,7 +145,7 @@ cat > /etc/fstab <<'EOF'
 EOF
 
 # set rackspace mirrors
-sed -i '/^#baseurl=/c\baseurl=http://mirror.rackspace.com/fedora/releases/$releasever/Server/$basearch/os/' /etc/yum.repos.d/*.repo
+sed -i 's%#baseurl=http://download.fedoraproject.org/pub/fedora/linux%baseurl=http://mirror.rackspace.com/fedora%' /etc/yum.repos.d/*.repo
 sed -i '/metalink/s/^/#/' /etc/yum.repos.d/*.repo
 
 # update all
@@ -179,7 +175,6 @@ rm -f /root/.bash_history
 rm -f /root/.nano_history
 rm -f /root/.lesshst
 rm -f /root/.ssh/known_hosts
-rm -rf /var/log/anaconda/
 find /var/log -type f ! -iname README -exec truncate -s 0 {} \;
 find /tmp -type f -delete
 find /root -type f ! -iname ".*" -delete
