Restore the installation repo

--- a/Fedora_23_PVHVM.cfg
+++ b/Fedora_23_PVHVM.cfg
@@ -4,6 +4,7 @@ cmdline
 
 # Install from a friendly mirror and add updates
 url --url=http://mirror.rackspace.com/fedora/releases/23/Server/x86_64/os/
+repo --name=fedora --baseurl=http://mirror.rackspace.com/fedora/releases/23/Everything/x86_64/os/
 
 # Language and keyboard setup
 lang en_US.UTF-8
