Setting acpi=noirq and misc.

--- a/Fedora_22_Teeth.cfg
+++ b/Fedora_22_Teeth.cfg
@@ -279,7 +279,7 @@ default linux
 
 LABEL linux
       KERNEL /boot/vmlinuz-$version
-      APPEND root=LABEL=root rd.fstab=no acpi=off noapic modprobe.blacklist=mei_me rd.auto=1
+      APPEND root=LABEL=root rd.fstab=no acpi=noirq noapic modprobe.blacklist=mei_me rd.auto=1
       initrd /boot/initramfs-$version.img
 EOF
 rm -f /etc/extlinux.conf
