--- a/Fedora_23_Teeth.cfg
+++ b/Fedora_23_Teeth.cfg
@@ -274,7 +274,7 @@ default linux
 
 LABEL linux
       KERNEL /boot/vmlinuz-$version
-      APPEND root=LABEL=root net.ifnames=0 biosdevname=0 rd.fstab=no acpi=off noapic modprobe.blacklist=mei_me rd.auto=1
+      APPEND root=LABEL=root net.ifnames=0 biosdevname=0 rd.fstab=no acpi=noirq noapic modprobe.blacklist=mei_me rd.auto=1
       initrd /boot/initramfs-$version.img
 EOF
 rm -f /etc/extlinux.conf
