Remove EPEL repo, remove RHEL 7 stuff, clean up repositories, and fix log truncation

--- a/Red_Hat_Enterprise_Linux_6_VMware.cfg
+++ b/Red_Hat_Enterprise_Linux_6_VMware.cfg
@@ -1,4 +1,5 @@
 # Install, not upgrade
+## test
 install
 cmdline
 
@@ -6,7 +7,6 @@ cmdline
 #url --url=http://intra.mirror.rackspace.com/kickstart/rhel-x86_64-server-6/
 cdrom
 repo --name=base --baseurl=http://intra.mirror.rackspace.com/kickstart/rhel-x86_64-server-6/
-repo --name=epel --baseurl=http://mirror.rackspace.com/epel/6/x86_64/
 
 # Language and keyboard setup
 lang en_US.UTF-8
@@ -49,7 +49,6 @@ poweroff
 %packages --excludedocs --nobase
 @core
 kernel
-epel-release
 rsync
 tar
 wget
@@ -66,13 +65,6 @@ curl
 %end
 
 %post --erroronfail
-
-# setup systemd to boot to the right runlevel
-rm -f /etc/systemd/system/default.target
-ln -s /lib/systemd/system/multi-user.target /etc/systemd/system/default.target
-
-# If you want to remove rsyslog and just use journald, remove this!
-rmdir /var/log/journal/ 
 
 # this is installed by default but we don't need it in virt
 yum -C -y remove linux-firmware
@@ -127,12 +119,6 @@ cat > /etc/hosts << EOF
 ::1         localhost localhost.localdomain localhost6 localhost6.localdomain6
 EOF
 
-# Because memory is scarce resource in most cloud/virt environments,
-# and because this impedes forensics, we are differing from the Fedora
-# default of having /tmp on tmpfs.
-echo "Disabling tmpfs for /tmp."
-systemctl mask tmp.mount
-
 # tmp tmp
 mkdir /tmp/tmp
 cd /tmp/tmp
@@ -140,11 +126,6 @@ cd /tmp/tmp
 # set some stuff
 echo 'net.ipv4.conf.eth0.arp_notify = 1' >> /etc/sysctl.conf
 echo 'vm.swappiness = 0' >> /etc/sysctl.conf
-
-# set rackspace mirrors
-sed -i 's%#baseurl.*%baseurl=http://mirror.rackspace.com/epel/6/x86_64/%g' /etc/yum.repos.d/epel.repo
-sed -i '/mirrorlist/s/^/#/' /etc/yum.repos.d/epel.repo
-sed -i '/baseurl/s/# *//' /etc/yum.repos.d/epel.repo
 
 cat >> /etc/yum.repos.d/rhel-source.repo <<'EOF'
 [rhel-source]
@@ -326,8 +307,7 @@ sed -i 's%cdrom_list = util.find_devs_with(path="/dev/sr1")%cdrom_list = util.fi
 yum -y update
 
 # make sure repos are empty for rhel
-for k in $(find /etc/yum.repos.d -type f\( ! -name "*epel*" \)); do rm -f $k; done
-echo > /etc/yum.repos.d/rhel-source.repo
+find /etc/yum.repos.d -type f -delete
 
 # force grub to use generic disk labels, bootloader above does not do this
 sed -i 's%root=.*%root=/dev/sda1%g' /boot/grub/grub.conf
@@ -345,7 +325,6 @@ bash package_postback.sh Red_Hat_Enterprise_Linux_6_VMware
 
 # clean up
 yum clean all
-truncate -c -s 0 /var/log/yum.log
 rm -f /root/anaconda-ks.cfg
 rm -f /etc/ssh/ssh_host_*
 rm -f /etc/resolv.conf
@@ -354,7 +333,7 @@ rm -f /root/.nano_history
 rm -f /root/.lesshst
 rm -f /root/.ssh/known_hosts
 rm -rf /tmp/tmp
-for k in $(find /var/log -type f); do echo > $k; done
-for k in $(find /tmp -type f); do rm -f $k; done
-for k in $(find /root -type f \( ! -iname ".*" \)); do rm -f $k; done
+find /var/log -type f -exec truncate -s 0 {} \;
+find /tmp -type f -delete
+find /root -type f ! -iname ".*" -delete
 %end
