--- a/Red_Hat_Enterprise_Linux_7_Teeth.cfg
+++ b/Red_Hat_Enterprise_Linux_7_Teeth.cfg
@@ -118,6 +118,24 @@ cat > /etc/sysconfig/iptables <<'EOF'
 COMMIT
 EOF
 
+# ip6tables config                                                              
+cat > /etc/sysconfig/ip6tables <<'EOF'                                          
+# Simple static firewall loaded by iptables.service. Replace                    
+# this with your own custom rules, run lokkit, or switch to                     
+# shorewall or firewalld as your needs dictate.                                 
+*filter                                                                         
+:INPUT ACCEPT [0:0]                                                             
+:FORWARD ACCEPT [0:0]                                                           
+:OUTPUT ACCEPT [0:0]                                                            
+-A INPUT -m conntrack --ctstate ESTABLISHED,RELATED -j ACCEPT                   
+-A INPUT -p ipv6-icmp -j ACCEPT                                                 
+-A INPUT -i lo -j ACCEPT                                                        
+-A INPUT -m conntrack --ctstate NEW -m tcp -p tcp --dport 22 -j ACCEPT          
+-A INPUT -j REJECT --reject-with icmp6-adm-prohibited                           
+-A FORWARD -j REJECT --reject-with icmp6-adm-prohibited                         
+COMMIT                                                                          
+EOF
+
 echo -n "Getty fixes"
 # although we want console output going to the serial console, we don't
 # actually have the opportunity to login there. FIX.
