Adding changes from kickstart server to repo

--- a/Fedora_23_Teeth.cfg
+++ b/Fedora_23_Teeth.cfg
@@ -144,6 +144,41 @@ echo "dns=none" >> /etc/NetworkManager/NetworkManager.conf
 # we don't want to be tied to specific virtual (!) hardware
 #rm -f /etc/udev/rules.d/70*
 #ln -s /dev/null /etc/udev/rules.d/80-net-name-slot.rules
+echo -n > /etc/udev/rules.d/70-persistent-net.rules
+ln -s /dev/null /etc/udev/rules.d/75-persistent-net-generator.rules
+
+mkdir /etc/systemd/network
+# OMv1
+cat > /etc/systemd/network/10-eth.link <<'EOF'
+[Match]
+Path=pci-0000:03:00.0-*
+
+[Link]
+Name=eth0
+EOF
+cat > /etc/systemd/network/11-eth.link <<'EOF'
+[Match]
+Path=pci-0000:03:00.1-*
+
+[Link]
+Name=eth1
+EOF
+
+# OMv2
+cat > /etc/systemd/network/12-eth.link <<'EOF'
+[Match]
+Path=pci-0000:08:00.0-*
+
+[Link]
+Name=eth0
+EOF
+cat > /etc/systemd/network/13-eth.link <<'EOF'
+[Match]
+Path=pci-0000:08:00.1-*
+
+[Link]
+Name=eth1
+EOF
 
 # generic localhost names
 cat > /etc/hosts << EOF
@@ -261,6 +296,10 @@ chmod +x /etc/rc.d/rc.local
 systemctl enable rc-local.service
 systemctl disable NetworkManager.service
 
+# disable acpi soft-off
+chkconfig --del acpid
+systemctl disable acpid.service
+
 # make double sure grub/extlinux are happy
 # remove any grub entries and
 # manually create extlinux file
@@ -274,7 +313,7 @@ default linux
 
 LABEL linux
       KERNEL /boot/vmlinuz-$version
-      APPEND root=LABEL=root net.ifnames=0 biosdevname=0 rd.fstab=no acpi=noirq noapic modprobe.blacklist=mei_me rd.auto=1
+      APPEND root=LABEL=root net.ifnames=0 biosdevname=0 rd.fstab=no modprobe.blacklist=mei_me rd.auto=1
       initrd /boot/initramfs-$version.img
 EOF
 rm -f /etc/extlinux.conf
