Readd epel repo to VMware image
We need this repo to install pacakges such as cloud-init.

--- a/Red_Hat_Enterprise_Linux_6_VMware.cfg
+++ b/Red_Hat_Enterprise_Linux_6_VMware.cfg
@@ -7,6 +7,7 @@ cmdline
 #url --url=http://intra.mirror.rackspace.com/kickstart/rhel-x86_64-server-6/
 cdrom
 repo --name=base --baseurl=http://intra.mirror.rackspace.com/kickstart/rhel-x86_64-server-6/
+repo --name=epel --baseurl=http://mirror.rackspace.com/epel/6/x86_64/
 
 # Language and keyboard setup
 lang en_US.UTF-8
