fixes for the latest round of image releases

--- a/Scientific_Linux_7_PVHVM.cfg
+++ b/Scientific_Linux_7_PVHVM.cfg
@@ -3,11 +3,8 @@ install
 cmdline
 
 # Install from a friendly mirror and add updates
-#url --url=http://mirror.lstn.net/scientific/7rolling/x86_64/os/
-#url --url=http://mirror.lstn.net/scientific/7/x86_64/os/
-url --url=http://mirror.oss.ou.edu/scientific/7x/x86_64/os/
-#repo --name=base --baseurl=http://mirror.lstn.net/scientific/7rolling/x86_64/os/
-repo --name=base --baseurl=http://mirror.oss.ou.edu/scientific/7x/x86_64/os/
+url --url=http://ftp.scientificlinux.org/linux/scientific/7rolling/x86_64/os/
+repo --name=base --baseurl=http://ftp.scientificlinux.org/linux/scientific/7rolling/x86_64/os/
 repo --name=epel --baseurl=http://mirror.rackspace.com/epel/7/x86_64/
 
 # Language and keyboard setup
@@ -52,10 +49,6 @@ firstboot --disable
 # Minimal package set
 %packages 
 @base
-# lean install options
-#%packages --excludedocs --nobase --ignoremissing
-#@core
-# leaving the rest below anyway
 kernel
 rsync
 tar
@@ -86,14 +79,10 @@ cat >> /etc/resolv.conf <<'EOF'
 nameserver 8.8.8.8
 EOF
 cp /etc/resolv.conf /mnt/sysimage/etc/resolv.conf
+rm -f /usr/share/anaconda/post-scripts/99-copy-logs.ks
 %end
 
 %post --log=/var/log/post_install.log --interpreter /bin/bash
-# setup systemd to boot to the right runlevel
-echo -n "Setting default runlevel to multiuser text mode"
-rm -f /etc/systemd/system/default.target
-ln -s /lib/systemd/system/multi-user.target /etc/systemd/system/default.target
-
 # If you want to remove rsyslog and just use journald, remove this!
 echo -n "Disabling persistent journal"
 rmdir /var/log/journal/ 
@@ -179,6 +168,10 @@ EOF
 echo "Disabling tmpfs for /tmp."
 /usr/bin/systemctl mask tmp.mount
 
+# networking is handled by nova-agent
+systemctl mask NetworkManager
+systemctl mask NetworkManager-wait-online
+
 # tmp tmp
 mkdir /tmp/tmp
 cd /tmp/tmp
@@ -189,8 +182,9 @@ wget http://ce3598b91333d7474379-b85ce4d8c2253d3876bef92f62a263f8.r84.cf5.rackcd
 rpm -Uhv xe-guest-utilities*.rpm
 
 # install agent
-wget https://github.com/rackerlabs/openstack-guest-agents-unix/releases/download/1.39.1/nova-agent-1.39-1.x86_64.rpm
-rpm -Uhv nova-agent*
+#wget https://github.com/rackerlabs/openstack-guest-agents-unix/releases/download/1.39.1/nova-agent-1.39-1.x86_64.rpm
+rpm -U https://github.com/carlwgeorge/nova-agent-rpm/releases/download/1.39.1-2/nova-agent-1.39.1-2.el7.x86_64.rpm
+systemctl enable nova-agent
 
 # set some stuff
 echo 'net.ipv4.conf.eth0.arp_notify = 1' >> /etc/sysctl.conf
@@ -265,25 +259,31 @@ cloud_final_modules:
  - final-message
 EOF
 
-cat > /usr/lib/systemd/system/cloud-init-local.service <<'EOF'
+# a delay to nova-agent startup so it has time to configure the network
+cat > /usr/lib/systemd/system/nova-agent-delay.service <<'EOF'
 [Unit]
-Description=Initial cloud-init job (pre-networking)
-Wants=local-fs.target
-After=local-fs.target
+Description=nova-agent delay service
+Requires=nova-agent.service
+After=nova-agent.service
 
 [Service]
 Type=oneshot
-ExecStartPre=/usr/bin/sleep 20
-ExecStart=/usr/bin/cloud-init init --local
 RemainAfterExit=yes
-TimeoutSec=0
-
-# Output needs to appear in instance console output
-StandardOutput=journal+console
+ExecStart=/usr/bin/sleep 10
 
 [Install]
 WantedBy=multi-user.target
 EOF
+
+# add the delay to the cloud-init service
+mkdir /etc/systemd/system/cloud-init.service.d
+cat > /etc/systemd/system/cloud-init.service.d/nova-agent-delay.conf <<'EOF'
+[Unit]
+After=nova-agent-delay.service
+EOF
+
+systemctl enable nova-agent-delay.service
+
 
 # set rackspace mirrors
 #sed -i 's%#baseurl.*%baseurl=http://mirror.rackspace.com/epel/7/x86_64/%g' /etc/yum.repos.d/epel.repo
@@ -303,13 +303,9 @@ grub2-mkconfig
 wget http://KICK_HOST/kickstarts/package_postback.sh
 bash package_postback.sh Scientific_Linux_7_PVHVM
 
-/usr/bin/systemctl disable NetworkManager-wait-online.service
-/usr/bin/systemctl disable NetworkManager.service
-
 # clean up
 passwd -d root
 yum clean all
-truncate -c -s 0 /var/log/yum.log
 echo "" > /etc/machine-id
 rm -f /etc/ssh/ssh_host_*
 rm -f /root/.bash_history
@@ -322,9 +318,8 @@ touch /etc/resolv.conf
 rm -f /etc/sysconfig/network-scripts/ifcfg-eth0
 rm -f /root/anaconda-ks.cfg
 rm -rf /var/var
-for k in $(find /var/log -type f); do echo > $k; done
-for k in $(find /tmp -type f); do rm -f $k; done
-# watch these lines, causing kick problems
-#for k in $(find /root -type f \ ( ! -iname ".*" \)); do rm -f $k; done
+find /var/log -type f -exec truncate -s 0 {} \;
+find /tmp -type f -delete
+find /root -type f ! -iname ".*" -delete
 
 %end
