--- a/Debian_Testing_PVHVM.cfg
+++ b/Debian_Testing_PVHVM.cfg
@@ -67,7 +67,7 @@ tasksel tasksel/first multiselect minimal
 
 ### Package selection
 cloud-init cloud-init/datasources multiselect None, ConfigDrive
-d-i pkgsel/include string openssh-server rsync sudo wget curl parted debconf-utils cloud-init cloud-initramfs-dyn-netconf cloud-initramfs-growroot
+d-i pkgsel/include string openssh-server rsync sudo wget curl parted debconf-utils cloud-init cloud-initramfs-dyn-netconf cloud-initramfs-growroot python2.7
 
 # Whether to upgrade packages after debootstrap.
 # Allowed values: none, safe-upgrade, full-upgrade
@@ -93,7 +93,7 @@ in-target mkdir /tmp/tmp;\
 in-target wget -O /tmp/tmp/xe-guest-utilities_6.2.0-1120_amd64.deb http://ce3598b91333d7474379-b85ce4d8c2253d3876bef92f62a263f8.r84.cf5.rackcdn.com/xe-guest-utilities_6.2.0-1120_amd64.deb;\
 in-target wget -O /tmp/tmp/nova-agent_1.39.1_all.deb https://github.com/rackerlabs/openstack-guest-agents-unix/releases/download/1.39.1/nova-agent_1.39.1_all.deb;\
 in-target dpkg -iR /tmp/tmp;\
-in-target apt-get update;\
-in-target apt-get -y dist-upgrade;\
+#in-target apt-get update;\
+#in-target apt-get -y dist-upgrade;\
 in-target apt-get -y install resolvconf;\
 chroot /target sh -c "cd /tmp/tmp; wget http://KICK_HOST/kickstarts/Debian_Testing_PVHVM_post.sh; chmod +x Debian_Testing_PVHVM_post.sh; bash -x Debian_Testing_PVHVM_post.sh; rm -rf /tmp/tmp"
