--- a/Fedora_23_Teeth.cfg
+++ b/Fedora_23_Teeth.cfg
@@ -206,7 +206,7 @@ sed -i 's%cmd.append("-t")%#cmd.append("-t")%' /usr/lib/python3.4/site-packages/
 cat > /etc/cloud/cloud.cfg.d/10_rackspace.cfg <<'EOF'
 datasource_list: [ ConfigDrive, None ]
 disable_root: False
-ssh_pwauth: False
+ssh_pwauth: True
 ssh_deletekeys: False
 resize_rootfs: noblock
 manage_etc_hosts: localhost
@@ -217,7 +217,7 @@ system_info:
   distro: fedora
   default_user:
     name: root
-    lock_passwd: True
+    lock_passwd: False
 
 cloud_config_modules:
  - disk_setup
@@ -350,7 +350,6 @@ echo "done"
 # clean up
 rm -f /etc/sysconfig/network-scripts/ifcfg-ens3
 passwd -d root
-passwd -l root
 yum clean all
 truncate -c -s 0 /var/log/yum.log
 echo "" > /etc/machine-id
