--- a/Red_Hat_Enterprise_Linux_7_Teeth.cfg
+++ b/Red_Hat_Enterprise_Linux_7_Teeth.cfg
@@ -213,7 +213,7 @@ EOF
 
 cat > /etc/cloud/cloud.cfg.d/10_rackspace.cfg <<'EOF'
 disable_root: False
-ssh_pwauth: False
+ssh_pwauth: True
 ssh_deletekeys: False
 resize_rootfs: noblock
 manage_etc_hosts: localhost
@@ -224,7 +224,7 @@ system_info:
   distro: rhel
   default_user:
     name: root
-    lock_passwd: True
+    lock_passwd: False
 ssh_svcname: ssh
 mounts:
  - [ ephemeral0, null ]
@@ -316,7 +316,6 @@ bash package_postback.sh Red_Hat_Enterprise_Linux_7_Teeth
 
 # clean up
 passwd -d root
-passwd -l root
 yum clean all
 truncate -c -s 0 /var/log/yum.log
 echo "" > /etc/machine-id
