--- a/Fedora_23_PVHVM.cfg
+++ b/Fedora_23_PVHVM.cfg
@@ -186,4 +186,5 @@ find /root -type f ! -iname ".*" -delete
 # no need to keep Anaconda logs on every cloud server
 %pre
 rm -f /usr/share/anaconda/post-scripts/99-copy-logs.ks
+rm -f /root/anaconda-ks.cfg
 %end
