Add sosreport package to RHEL kicks

--- a/Red_Hat_Enterprise_Linux_7_PVHVM.cfg
+++ b/Red_Hat_Enterprise_Linux_7_PVHVM.cfg
@@ -73,6 +73,9 @@ iptables-services
 cloud-init
 cloud-utils
 cloud-utils-growpart
+sos
+xz
+xz-libs
 # all below are required for cloud-init
 epel-release
 python-devel
