Correct repo removal

--- a/Red_Hat_Enterprise_Linux_6_PVHVM.cfg
+++ b/Red_Hat_Enterprise_Linux_6_PVHVM.cfg
@@ -223,8 +223,7 @@ sed -i '/^  ${nova_agent}/a \ \ sleep 20' /etc/init.d/nova-agent
 yum -y update
 
 # make sure repos are empty for rhel
-for k in $(find /etc/yum.repos.d -type f\( ! -name "*epel*" \)); do rm -f $k; done
-echo > /etc/yum.repos.d/rhel-source.repo
+find /etc/yum.repos.d -type f ! -name '*epel*' -delete
 
 # force grub to use generic disk labels, bootloader above does not do this
 sed -i 's%root=.*%root=/dev/xvda1%g' /boot/grub/grub.conf
