fix yum localinstall for nss packages

--- a/Red_Hat_Enterprise_Linux_6.cfg
+++ b/Red_Hat_Enterprise_Linux_6.cfg
@@ -149,7 +149,7 @@ rpm -Uhv nova-agent*
 # hotfix for nss on PV images
 wget http://KICK_HOST/packages/rhel/6/nss-softokn-3.14.3-23.3.el6_8.x86_64.rpm
 wget http://KICK_HOST/packages/rhel/6/nss-softokn-freebl-3.14.3-23.3.el6_8.x86_64.rpm
-yum localinstall nss*.rpm
+yum -y localinstall nss*.rpm
 
 # set some stuff
 echo 'net.ipv4.conf.eth0.arp_notify = 1' >> /etc/sysctl.conf
