avoid Rackspace mirrors until Fedora 24 final is released and synced

--- a/Fedora_24_PVHVM.cfg
+++ b/Fedora_24_PVHVM.cfg
@@ -4,8 +4,8 @@ cmdline
 
 # Install from a friendly mirror and add updates
 #url --url=http://mirror.rackspace.com/fedora/releases/24/Server/x86_64/os/
-url --url=https://mirrors.kernel.org/fedora/releases/test/24_Beta/Server/x86_64/os/
-repo --name=fedora --baseurl=https://mirrors.kernel.org/fedora/releases/test/24_Beta/Everything/x86_64/os/
+url --url=http://mirror.utexas.edu/fedora/linux/releases/test/24_Beta/Server/x86_64/os/
+repo --name=fedora --baseurl=http://mirror.utexas.edu/fedora/linux/releases/test/24_Beta/Server/x86_64/os/
 
 # Language and keyboard setup
 lang en_US.UTF-8
@@ -147,9 +147,9 @@ cat > /etc/fstab <<'EOF'
 /dev/xvda1 / ext4 defaults,errors=remount-ro,noatime,barrier=0 0 1
 EOF
 
-# set rackspace mirrors
-sed -i 's%#baseurl=http://download.fedoraproject.org/pub/fedora/linux%baseurl=http://mirror.rackspace.com/fedora%' /etc/yum.repos.d/*.repo
-sed -i '/metalink/s/^/#/' /etc/yum.repos.d/*.repo
+# set rackspace mirrors -- commented out until F24 final is released and propogated to RS mirrors
+#sed -i 's%#baseurl=http://download.fedoraproject.org/pub/fedora/linux%baseurl=http://mirror.rackspace.com/fedora%' /etc/yum.repos.d/*.repo
+#sed -i '/metalink/s/^/#/' /etc/yum.repos.d/*.repo
 
 # update all
 dnf -y update
