Fedora build improvements

--- a/Fedora_22_PVHVM.cfg
+++ b/Fedora_22_PVHVM.cfg
@@ -7,9 +7,6 @@ install
 cmdline
 
 # Install from a friendly mirror and add updates
-#url --url=http://dl.fedoraproject.org/pub/fedora/linux/releases/22/Server/x86_64/os/
-#repo --name=fedora --baseurl=http://dl.fedoraproject.org/pub/fedora/linux/releases/22/Everything/x86_64/os/
-#
 url --url=http://mirror.rackspace.com/fedora/releases/22/Server/x86_64/os/
 repo --name=fedora --baseurl=http://mirror.rackspace.com/fedora/releases/22/Everything/x86_64/os/
 
@@ -159,10 +156,9 @@ rpm -Uhv xe-guest-utilities*.rpm
 # install agent
 #wget https://github.com/rackerlabs/openstack-guest-agents-unix/releases/download/1.39.1/nova-agent-1.39-1.x86_64.rpm
 #rpm -Uhv nova-agent*
-wget --no-check-certificate http://KICK_HOST/nova-agent/nova-agent-Linux-x86_64-1.39.1.tar.gz
-tar xzvf nova-agent*.tar.gz
-sh installer.sh
-chkconfig nova-agent on
+wget https://github.com/carlwgeorge/nova-agent-rpm/releases/download/1.39.1-2/nova-agent-1.39.1-2.fc22.x86_64.rpm -O nova-agent.rpm
+rpm -Uvh nova-agent.rpm
+systemctl enable nova-agent
 
 # set some stuff
 echo 'net.ipv4.conf.eth0.arp_notify = 1' >> /etc/sysctl.conf
@@ -200,58 +196,18 @@ EOF
 
 # update all
 yum -y update
-yum -y upgrade
 
-# cloud-init fixes for nova-agent race condition
-cat > /usr/lib/systemd/system/cloud-init-local.service <<'EOF'
-[Unit]
-Description=Initial cloud-init job (pre-networking)
-Wants=local-fs.target
-After=local-fs.target
-
+# if cloud-init starts before nova-agent configures the network many things fail, so we'll delay for a bit
+mkdir -p /etc/systemd/system/cloud-init.service.d
+cat > /etc/systemd/system/cloud-init.service.d/delaystart.conf <<'EOF'
 [Service]
-Type=oneshot
-ExecStartPre=/usr/bin/sleep 20
-ExecStart=/usr/bin/cloud-init init --local
-RemainAfterExit=yes
-TimeoutSec=0
-
-# Output needs to appear in instance console output
-StandardOutput=journal+console
-
-[Install]
-WantedBy=multi-user.target
+ExecStartPre=/usr/bin/sleep 12
 EOF
-
-systemctl enable cloud-init-local
-systemctl enable cloud-init
-systemctl enable cloud-config
-systemctl enable cloud-final
 
 # some systemd workarounds
 sed -i 's/XenServer Virtual Machine Tools/xe-linux-distribution/g' /etc/init.d/xe-linux-distribution
 update-rc.d xe-linux-distribution defaults
 
-# intention is to move this bit into nova-agent instead
-cat > /usr/lib/systemd/system/nova-agent.service <<'EOF'
-[Unit]
-Description=nova-agent
-Wants=local-fs.target
-After=local-fs.target xe-linux-distribution.service
-
-[Service]
-Type=oneshot
-ExecStart=/etc/init.d/nova-agent start
-RemainAfterExit=yes
-TimeoutSec=0
-
-# Output needs to appear in instance console output
-StandardOutput=journal+console
-
-[Install]
-WantedBy=multi-user.target
-EOF
-systemctl enable nova-agent
 
 chmod +x /etc/rc.d/rc.local
 systemctl enable rc-local.service
@@ -276,13 +232,6 @@ EOF
 rm -f /etc/extlinux.conf
 ln -s /boot/extlinux.conf /etc/extlinux.conf
 
-# nova-agent and krb5-libs conflict workaround
-#cat > /etc/dnf/protected.d/dnf.conf <<'EOF'
-#dnf
-#krb5-libs
-#nova-agent
-#EOF
-
 # log packages
 wget http://KICK_HOST/kickstarts/package_postback.sh
 bash package_postback.sh Fedora_22_PVHVM
@@ -291,7 +240,6 @@ rm -rf /root/tmp
 # clean up
 passwd -d root
 yum clean all
-truncate -c -s 0 /var/log/yum.log
 echo "" > /etc/machine-id
 rm -f /root/anaconda-ks.cfg
 rm -f /etc/ssh/ssh_host_*
@@ -302,8 +250,8 @@ rm -f /root/.nano_history
 rm -f /root/.lesshst
 rm -f /root/.ssh/known_hosts
 rm -rf /tmp/tmp
-for k in $(find /var/log -type f); do echo > $k; done
-for k in $(find /tmp -type f); do rm -f $k; done
-for k in $(find /root -type f \( ! -iname ".*" \)); do rm -f $k; done
+find /var/log -type f -exec truncate -s 0 {} \;
+find /tmp -type f -delete
+find /root -type f ! -iname '.*' -delete
 
 %end
