kick cleanup for Fedora builds

--- a/Fedora_22_PVHVM.cfg
+++ b/Fedora_22_PVHVM.cfg
@@ -30,7 +30,7 @@ authconfig --enableshadow --passalgo=sha512
 selinux --permissive
 
 # Services running at boot
-services --enabled network,sshd
+services --enabled network,sshd,cloud-init-local,cloud-init,cloud-config,cloud-final
 services --disabled sendmail
 
 # Disable anything graphical
@@ -93,15 +93,8 @@ which
 # set bootable
 parted -s /dev/xvda set 1 boot on
 
-# setup systemd to boot to the right runlevel
-rm -f /etc/systemd/system/default.target
-ln -s /lib/systemd/system/multi-user.target /etc/systemd/system/default.target
-
-# If you want to remove rsyslog and just use journald, remove this!
-rmdir /var/log/journal/ 
-
 # this is installed by default but we don't need it in virt
-yum -C -y remove linux-firmware
+dnf -C -y remove linux-firmware
 
 # initscripts don't like this file to be missing.
 cat > /etc/sysconfig/network << EOF
@@ -154,10 +147,7 @@ wget http://ce3598b91333d7474379-b85ce4d8c2253d3876bef92f62a263f8.r84.cf5.rackcd
 rpm -Uhv xe-guest-utilities*.rpm
 
 # install agent
-#wget https://github.com/rackerlabs/openstack-guest-agents-unix/releases/download/1.39.1/nova-agent-1.39-1.x86_64.rpm
-#rpm -Uhv nova-agent*
-wget https://github.com/carlwgeorge/nova-agent-rpm/releases/download/1.39.1-2/nova-agent-1.39.1-2.fc22.x86_64.rpm -O nova-agent.rpm
-rpm -Uvh nova-agent.rpm
+rpm -U https://github.com/carlwgeorge/nova-agent-rpm/releases/download/1.39.1-2/nova-agent-1.39.1-2.fc22.x86_64.rpm -O nova-agent.rpm
 systemctl enable nova-agent
 
 # set some stuff
@@ -181,21 +171,11 @@ cat > /etc/fstab <<'EOF'
 EOF
 
 # set rackspace mirrors
-#sed -i 's%download.fedoraproject.org/pub%mirror.rackspace.com%g' /etc/yum.repos.d/fedora.repo
-#sed -i 's%download.fedoraproject.org/pub%mirror.rackspace.com%g' /etc/yum.repos.d/fedora-updates.repo
-#sed -i 's%download.fedoraproject.org/pub%mirror.rackspace.com%g' /etc/yum.repos.d/fedora-updates-testing.repo
-#sed -i '%/linux%d' /etc/yum.repos.d/fedora.repo
-#sed -i '%/linux%d' /etc/yum.repos.d/fedora-updates.repo
-#sed -i '%/linux%d' /etc/yum.repos.d/fedora-updates-testing.repo
-#sed -i '/mirrorlist/s/^/#/' /etc/yum.repos.d/fedora.repo
-#sed -i '/mirrorlist/s/^/#/' /etc/yum.repos.d/fedora-updates.repo
-#sed -i '/mirrorlist/s/^/#/' /etc/yum.repos.d/fedora-updates-testing.repo
-#sed -i 's/#baseurl/baseurl/g' /etc/yum.repos.d/fedora.repo
-#sed -i 's/#baseurl/baseurl/g' /etc/yum.repos.d/fedora-updates.repo
-#sed -i 's/#baseurl/baseurl/g' /etc/yum.repos.d/fedora-updates-testing.repo
+sed -i 's%#baseurl=http://download.fedoraproject.org/pub/fedora/linux%baseurl=http://mirror.rackspace.com/fedora%' /etc/yum.repos.d/*.repo
+sed -i '/metalink/s/^/#/' /etc/yum.repos.d/*.repo
 
 # update all
-yum -y update
+dnf -y update
 
 # if cloud-init starts before nova-agent configures the network many things fail, so we'll delay for a bit
 mkdir -p /etc/systemd/system/cloud-init.service.d
@@ -212,7 +192,7 @@ update-rc.d xe-linux-distribution defaults
 chmod +x /etc/rc.d/rc.local
 systemctl enable rc-local.service
 
-yum -y install kernel
+dnf -y install kernel
 # make double sure grub/extlinux are happy
 # remove any grub entries and
 # manually create extlinux file
@@ -239,7 +219,7 @@ rm -rf /root/tmp
 
 # clean up
 passwd -d root
-yum clean all
+dnf clean all
 echo "" > /etc/machine-id
 rm -f /root/anaconda-ks.cfg
 rm -f /etc/ssh/ssh_host_*
